[package]
name = "neos-tracking-pixel"
version = "0.1.1"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.1.0", features = ["full"] }
warp = "~0.3.0" # uses tokio 1.0
png = "~0.16.0"
chrono = "~0.4.0"
